force-app/main/default/objects/Email_Subscription__c/fields/Contacts_Only__c.field-meta.xml
<CustomField>
        <fullName>Contacts_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacts Only</label>
        <type>Checkbox</type>
    </CustomField>