force-app/main/default/objects/Email_Subscription__c/fields/MID__c.field-meta.xml
<CustomField>
        <fullName>MID__c</fullName>
        <label>MID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>