force-app/main/default/objects/Email_Subscription__c/fields/Sequence__c.field-meta.xml
<CustomField>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>